Fixed tab labels being too small in admonitions

--- a/src/assets/stylesheets/main/extensions/pymdownx/_tabbed.scss
+++ b/src/assets/stylesheets/main/extensions/pymdownx/_tabbed.scss
@@ -86,7 +86,7 @@
       padding: px2em(12px, 12.8px) 1.25em px2em(10px, 12.8px);
       color: var(--md-default-fg-color--light);
       font-weight: 700;
-      font-size: px2em(12.8px);
+      font-size: px2rem(12.8px);
       border-bottom: px2rem(2px) solid transparent;
       cursor: pointer;
       transition: color 250ms;
